[package]
name = "rusty-snake"
version = "0.1.0"
edition = "2021"
default-run = "client"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
crossterm = "0.24.0"
rand = "0.8.5"
tokio = { version = "1.20.1", features = ["full"] }
rusty-ascii-graphics = { path = "rusty-ascii-graphics" }
bincode = "1.3.3"
serde = { version = "1.0.142", features = ["derive"] }
